quick alignment fix

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -55,6 +55,7 @@
       color: $gold;
       font-family: $metropolis;
       content: "\2192";
+      vertical-align: middle;
     }
 
   }
